--- a/draw_bot/bot_with_nlu/domain.yml
+++ b/draw_bot/bot_with_nlu/domain.yml
@@ -1,15 +1,16 @@
-actions:
-- action_draw_shape
-- utter_intro
-
-entities:
-- num_sides
-- shape
-
 intents:
 - intro
 - draw_shape
-
+- greet
+entities:
+- num_sides
+- shape
 templates:
   utter_intro:
   - text: Hi, I am Drawbot, I can draw shapes for you
+  utter_greet:
+  - text: Hey!
+actions:
+- action_draw_shape
+- utter_intro
+- utter_greet
