--- a/wordbot/domain.yml
+++ b/wordbot/domain.yml
@@ -7,7 +7,7 @@ intents:
 
 actions:
   - action_get_meaning
-  - action_get_opposite
+  # - action_get_opposite
 
 entities:
   - word
@@ -25,6 +25,6 @@ responses:
   get_meaning:
     - action_get_meaning
 
-  get_opposite:
-    - action_get_opposite
+  # get_opposite:
+  #   - action_get_opposite
 
